@@ -1,3 +1,11 @@
+2003-10-15  Mike Kestner  <mkestner@ximian.com>
+
+	* generator/Property.cs : use new Opaque value ctor and 
+	rework get/set blocks for Opaque types. [Fixes #47959]
+	* glib/Opaque.cs : kill explicit IntPtr operator.
+	* glib/Value.cs : rework Opaque value ctor.
+	
+
 2003-10-14  Mike Kestner  <mkestner@ximian.com>
 
 	* gtk/Gtk.metadata : rule for ClipboardGetFunc
